# powerfulseal

./: .dockerignore  .gitignore  .travis.yml  CONTRIBUTING.md  LABELS.md  MANIFEST.in  METRICS.md  Makefile  README.md  TESTING.md  docker_deploy.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: greetings.yml  validate-examples.yml
docs/: 1_index.md  2_getting-started.md  4_policies.md  5_setup.md  6_in-depth.md  7_faq.md  8_contribute.md  _config.yml  cloud-provider-requirements.md  contribute.md  crd.md  extract-examples.py  getting-started.md  in-depth.md  index.md  setup.md  terminology.md
docs-schema/: index.html
docs/_site/: autonomous-mode.html  cloud-provider-requirements.html  contribute.html  deployment-redundancy.html  faq.html  getting-started.html  http-proxy-http_proxy.html  in-depth-topics.html  index.html  interactive-mode.html  kubectl.html  label-mode.html  master-node.html  mixing-nodes-and-pods.html  modes.html  pods-rescheduled.html  policies.html  setup.html  terminology.html  verify.html
docs/docs/: README.md  rbac.yml
docs/examples/: datadog.json  grafana.json
docs/media/: nodes.cast  pods.cast  powerful-seal.ai
docs/modes/: autonomous.md  index.md  interactive.md  label.md
docs/policies/: clone-tc.md  clone-toxiproxy.md  deployment-redundancy.md  http-proxy.md  kubectl.md  master-node.md  mixing-nodes-pods.md  pods-and-hosts.md  (+2 more)
examples/: extract-examples.py  policy_kill_random_default.yml  seal.alerts.yml
kubernetes/: crd.yaml  crd.yml  policy.yml  powerfulseal.yml  rbac.yml  sandbox.yml  sandbox_scenario.yml  scenario_example.yaml  scenario_example.yml
media/: TESTING.md
powerfulseal/: __init__.py  version.py
schemaTools/: package-lock.json  package.json  updateSchema.js
tests/: __init__.py  fixtures.py
(+130 files in other folders)
