[metadata]
name = powerfulseal
version = 3.0.0rc0
author = Mikolaj Pawlikowski
author_email = mikolaj@pawlikowski.pl
description = PowerfulSeal - a powerful testing tool for Kubernetes clusters
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2.0
license_file = LICENSE
url = https://github.com/bloomberg/powerfulseal
project_urls =
    Source=https://github.com/bloomberg/powerfulseal
    Tracker=https://github.com/bloomberg/powerfulseal/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Quality Assurance
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
python_requires = >=3
install_requires =
    ConfigArgParse>=0.11.0,<1
    Flask>=1.0.0,<2
    termcolor>=1.1.0,<2
    openstacksdk>=0.10.0,<1
    spur>=0.3.20,<1
    kubernetes>=11.0.0,<12.0.0
    PyYAML>=5.1.2,<6
    jsonschema>=3.0.2,<4
    boto3>=1.5.15,<2.0.0
    azure-common>=1.1.23,<2.0.0
    azure-mgmt-resource>=2.2.0,<3.0.0
    azure-mgmt-network>=2.7.0,<3.0.0
    azure-mgmt-compute>=4.6.2,<5.0.0
    future>=0.16.0,<1
    requests>=2.21.0,<3
    prometheus_client>=0.3.0,<0.4.0
    flask-cors>=3.0.6,<4
    coloredlogs>=10.0.0,<11.0.0
    paramiko>=2.5.0,<3
    google-api-python-client>=1.7.8
    google-auth>=1.6.2
    google-auth-httplib2>=0.0.3
    oauth2client>=4.1.3
    datadog>=0.29.0,<1.0.0
    python-dateutil>=2.5.3,<2.7.0

[options.extras_require]
testing =
    pytest>=3.0,<4
    pytest-cov>=2.5,<3
    mock>=4,<5

[options.entry_points]
console_scripts =
    seal = powerfulseal.cli.__main__:start
    powerfulseal = powerfulseal.cli.__main__:start
